--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
 nav {
-  background-color: #5f5151;
+  background-color: #44ce62;
   color: white;
   padding: 10px;
   text-align: center;
+  font-size: 20px;
 }
 
 footer {
-  background-color: #5f5151;
+  background-color: #44ce62;
   color: white;
   padding: 10px;
   text-align: center;
+  font-size: 20px;
 }
 
 h2 {
@@ -20,6 +22,7 @@ aside {
   width: 200px;
   background-color: bisque;
   padding: 10px;
+  font-size: 20px;
   float: left;
   display: flex;
   justify-content: center;
